--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-agp = "8.5.1"
+agp = "8.6.0"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
-androidx-activityCompose = "1.9.0"
-compose-plugin = "1.6.11"
-kotlin = "2.0.0"
+androidx-activityCompose = "1.9.2"
+compose-plugin = "1.7.0-beta02"
+kotlin = "2.0.20"
 coroutines = "1.8.1"
 
 [libraries]
